# ria

./: .gitignore  Cargo.toml  FIX_NPU.md  LICENSE  README.md
.cargo/: config.toml
.claude/: settings.local.json
assets/: placeholder.txt
assets/model_catalog/: intel_npu_onnx.json
src/: lib.rs  main.rs
src/ai/: inference.rs  mod.rs  models.rs  providers.rs  providers_broken.rs  providers_complex.rs  providers_old.rs  sampler.rs  tokenizer.rs
src/config/: mod.rs
src/ui/: app.rs  chat.rs  components.rs  mod.rs  models.rs  settings.rs
src/utils/: files.rs  mod.rs  system.rs
tests/: onnx_ep_fallback.rs  onnx_inference.rs  onnx_integration.rs  onnx_negative.rs  onnx_npu.rs  onnx_npu_bench.rs
tests/common/: mod.rs
